<resources>
    <string name="app_name">Leave me alone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="blocked_numbers">My blocked numbers</string>
    <string name="blocked_numbers_ktipp">K-Tipp blocked numbers</string>
    <string name="onoff_switch">On/Off Switch</string>
    <string name="hint_number">Number</string>
    <string name="hint_name">Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="pref_title_general">General</string>
    <string name="pref_key_master_switch">CallBlockerOnOff</string>
    <string name="pref_title_on_off">Enable call blocker</string>
    <string name="pref_summary_on_off">When enabled, all incoming calls registered in the blocked number list will be blocked.</string>
    <string name="pref_title_filters">Filter</string>
    <string name="pref_key_always_allow_contacts">AlwaysAllowFromContacts</string>
    <string name="pref_title_always_allow_contacts">Always allow contacts</string>
    <string name="pref_summary_always_allow_contacts">Never block calls from numbers which are registered in your contacts</string>
    <string name="pref_key_only_allow_contacts">OnlyAllowContacts</string>
    <string name="pref_title_only_allow_contacts">Only allow contacts</string>
    <string name="pref_summary_only_allow_contacts">Calls from numbers not in your contacts will always be blocked</string>
    <string name="pref_key_sync_enable">EnableSync</string>
    <string name="pref_title_sync_enable">Enable synchronization</string>
    <string name="pref_summary_sync_enable">Content of the K-Tipp block list will automatically be downloaded in a certain interval</string>
    <string name="pref_key_sync_interval">SyncInterval</string>
    <string name="pref_title_sync_intervale">Synchronization interval</string>
    <string name="pref_summary_sync_interval">How often will the list of blocked numbers be downloaded from K-Tipp. </string>
    <string name="number_invalid">Please enter valid number</string>
    <string name="action_delete">Delete</string>
    <string name="number_added">Number added</string>
    <string name="numbers_deleted">Number(s) deleted</string>
    <string name="action_sync">Synchronize</string>
    <string name="call_blocker_enabled">Call blocker enabled</string>
    <string name="call_blocker_disabled">Call blocker disabled</string>
    <string name="action_acount">About</string>
    <string name="about_title">License</string>
    <string name="copyright_notice"><![CDATA[Copyright 2016 Marc Doerflinger <leavemealone@bytes.li> and Patrick Ammann <pammann@gmx.net>]]></string>
    <string name="license_text">Apache License, Version 2.0, January 2004</string>
    <string name="license_details">License details: https://github.com/doerfli/leavemealone/blob/master/LICENSE.txt</string>
    <string name="privacy_policy_link">Privacy policy: http://doerfli.github.io/leavemealone/privacy-policy.html</string>
    <string name="contat_title">Contact</string>
    <string name="contact_text">If you have any questions, please contact us at\nleavemealone@bytes.li</string>
    <string name="support_donation_text">You can support us by making a donation at\nhttps://www.paypal.me/MarcDoerflinger</string>
    <string name="pref_title_syncronization">Synchronization</string>
    <string name="pref_title_dialog_interval">How often should the K-Tipp blacklist be synchronized</string>
    <string name="pref_sync_interval_default">onceaday</string>
    <string name="ok">OK</string>
    <string name="dialog_permission_request_title">Permission request</string>
    <string name="dialog_permission_request_READ_PHONE_STATE_EXPLANATION">This application requires access to incoming phone calls to intercept incoming calls. Without the permission "make and manage phone calls" the callblocker feature will not work. Please allow the app access to it in the next dialog.</string>
    <string name="dialog_permission_request_READ_CONTACTS_EXPLANATION">This application requires access to contacts to allow calls from contacts. Without the permission "access contacts" this feature will not work. Please allow the app access to it in the next dialog.</string>
    <string name="title_about">About</string>
    <string name="about_application_name_version">Leave Me Alone</string>
    <string name="version_placeholder">x.y</string>
    <string name="about_version_short">v</string>
    <string name="sample_entry_add_new">Add new entries through + button</string>
    <string name="sample_entry_remove">Long-click entry to select and remove</string>
    <string name="sample_entry_sync">Select \'Synchronize\' from menu to download K-Tipp blocklist</string>
    <string name="notification_syncing_blocklist_title">Syncing K-Tipp blocklist</string>
    <string name="notification_sync_initial_page">Retrieving initial page</string>
    <string name="only_contacts_allowed_notification_title">Only calls from contacts allowed</string>
    <string name="only_contacts_allowed_notification_subtitle">Click to open settings</string>
    <string name="notification_sync_subtitle_prefix">Retrieving page %1$d/%2$d</string>
    <string name="notification_sync_saving_numbers">Storing numbers</string>
    <string name="call_blocked">Call blocked</string>
    <string name="choose_function">Choose function</string>
    <string name="phone_number_placeholder">+xxxxxxxxxxx</string>
    <string name="name">Name</string>
    <string name="application_icon">app icon</string>
    <string name="action_privacy_policy">Privacy policy</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="channel_name">LeaveMeAlone</string>
</resources>
