<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_general"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="@string/pref_key_master_switch"
            android:title="@string/pref_title_on_off"
            android:summary="@string/pref_summary_on_off"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_filters"
        android:dependency="@string/pref_key_master_switch"
        android:key="pref_key_filters">
        <CheckBoxPreference
            android:key="@string/pref_key_always_allow_contacts"
            android:title="@string/pref_title_always_allow_contacts"
            android:summary="@string/pref_summary_always_allow_contacts"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/pref_key_only_allow_contacts"
            android:title="@string/pref_title_only_allow_contacts"
            android:summary="@string/pref_summary_only_allow_contacts"
            android:dependency="@string/pref_key_always_allow_contacts"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_syncronization"
        android:key="pref_key_sync">
        <CheckBoxPreference
            android:key="@string/pref_key_sync_enable"
            android:title="@string/pref_title_sync_enable"
            android:summary="@string/pref_summary_sync_enable"
            android:defaultValue="false" />
        <ListPreference
            android:dependency="@string/pref_key_sync_enable"
            android:key="@string/pref_key_sync_interval"
            android:title="@string/pref_title_sync_intervale"
            android:summary="@string/pref_summary_sync_interval"
            android:dialogTitle="@string/pref_title_dialog_interval"
            android:entries="@array/pref_sync_interval_entries"
            android:entryValues="@array/pref_sync_interval_values"
            android:defaultValue="@string/pref_sync_interval_default" />
    </PreferenceCategory>
</PreferenceScreen>